# codex-switcher

./: .gitignore  AGENTS.md  Agent.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
reference/codex-proxy/: LICENSE.notice  normalizer.py  zai_provider.py  zai_stream.py
scripts/: smoke-glm.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: otp_login_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: account.rs  bulk_import.rs  deep_link.rs  ide_control.rs  lib.rs  mailbox.rs  oauth.rs  oauth_server.rs  otp_login.rs  proxy.rs  refresh_lock.rs  relay_translate.rs  remote_client.rs  remote_server.rs  scheduler.rs  sentinel.rs  session_affinity.rs  skills.rs  switch_log.rs  token_tracker.rs  tray.rs  usage.rs
src-tauri/tests/: anchor_e2e.rs  integration_glm_translate.rs
src/components/: AccountCard.tsx  AccountList.css  AccountList.tsx  AddAccountModal.css  AddAccountModal.tsx  AddRelayModal.tsx  CachePanel.css  CachePanel.tsx  ConfirmModal.css  ConfirmModal.tsx  Dashboard.css  Dashboard.tsx  Proxy.css  Proxy.tsx  Settings.css  Settings.tsx  Skills.css  Skills.tsx  Stats.css  Stats.tsx  StatsBar.tsx  TrayPopup.css  TrayPopup.tsx  UsageCard.tsx
src/data/: relay_presets.ts
src/hooks/: useAccounts.ts  useCountdown.ts  useUsage.ts
