[package]
name = "codex-switcher"
version = "0.1.0"
description = "Codex 账号快速切换工具"
authors = ["xiaojian"]
edition = "2021"

[lib]
name = "codex_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2"
base64 = "0.22.1"
rand = "0.9.2"
sha2 = "0.10.9"
urlencoding = "2.1.3"
image = "0.25"
