[package]
name = "codex-switcher"
version = "0.2.1"
description = "Codex 多账号智能切换 + 本地代理 + 用量统计"
authors = ["xiaojian"]
edition = "2021"

[lib]
name = "codex_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
zip = "2"
url = "2"
base64 = "0.22.1"
rand = "0.9.2"
sha2 = "0.10.9"
urlencoding = "2.1.3"
image = "0.25"
